# DiscreteEarth

./: .gitignore  CMakeLists.txt  ChangeList  README.md
include/: _fp_contract_off.h  exports.h  gt.h
include/base/: casts.h  commandlineflags.h  log_severity.h  logging.h  port.h  stringprintf.h  strtoint.h
include/core/: CellID.h  Coords.h  cap.h  cell.h  cell_id.h  coords_internal.h  edge_clipping.h  edge_crosser.h  edge_crossings.h  edge_crossings_internal.h  edge_distances.h  edge_tessellator.h  gt_cap.h  gt_cell.h  gt_cell_id.h  gt_cell_union.cc  gt_cell_union.h  gt_coords.h  gt_latlng_rect.h  gt_latlng_rect_bounder.h  gt_metrics.cc  gt_metrics.h  gt_shape.cpp  gt_shape.h  gtcell.h  gtcell_id.h  gtcell_union.cc  gtcell_union.h  gtcoords.h  gtregion_coverer.cc  gtregion_coverer.h  latlng_rect.h  latlng_rect_bounder.h  r1interval.h  r2.h  r2rect.h  region.h  s1angle.h  s1chord_angle.h  s1interval.h  (+3 more)
include/geosot/: geosot_cell_id.h
include/gt/: gt_latlng_rect_bounder.cc  gt_latlng_rect_bounder.h  gt_latlng_rect_bounder_generator.cc  gt_latlng_rect_bounder_generator.h  gt_loop.h  gt_point.h  gt_polygon.h  gt_polyline.h  gt_region_cellunion_generator.cc  gt_region_cellunion_generator.h  gt_region_coverer.cc  gtcell.h  gtcell_id.h  gtcell_union.cc  gtcell_union.h  gtcoords.h  gtloop.h  gtmultipoint.h  gtpoint.h  gtpolygon.h  gtpolyline.h  s2metrics.h
include/index/: gt_cell_index.cpp  gt_cell_index.h  gt_point_index.cpp  gt_point_index.h  gt_region_index.cpp  gt_region_index.h  gt_region_term_generator.cpp  gt_region_term_generator.h  gt_shape_inex.cpp  gt_shape_inex.h
include/query/: gt_point_query_closest.cpp  gt_point_query_closest.h  gt_region_query_closest.cpp  gt_region_query_closest.h  gt_shape_query_closest.cpp  gt_shape_query_closest.h  gt_shape_query_contain_by.cpp  gt_shape_query_contain_by.h  gt_shape_query_contain_point.cpp  gt_shape_query_contain_point.h  gt_shape_query_contain_vertex.cpp  gt_shape_query_contain_vertex.h  gt_shape_query_furthest.cpp  gt_shape_query_furthest.h  gt_shape_query_intersect.cpp  gt_shape_query_intersect.h
include/s2/: edge_crosser.h  edge_crossings.h  r1interval.h  r2.h  r2rect.h  region.h  s1angle.h  s1chord_angle.h  s1interval.h  s2cap.h  s2cell.h  s2cell_id.h  s2centroids.h  s2coords.h  s2debug.h  s2earth.h  s2edge_crosser.h  s2edge_crossings.h  s2error.h  s2latlng.h  s2latlng_rect.h  s2measures.h  s2metrics.h  s2point.h  s2point_span.h  s2pointutil.h  s2polyline_simplifier.h  s2predicates.h  s2predicates_internal.h  s2projections.h
include/shape/: gt_loop_shape.cpp  gt_loop_shape.h  gt_point_vector_shape.cpp  gt_point_vector_shape.h  gt_polygon_shape.cpp  gt_polygon_shape.h  gt_polyline_shape.cpp  gt_polyline_shape.h  gt_shape_edge.cpp  gt_shape_edge.h
include/strings/: ostringstream.h  serialize.h
include/tmp/: cell.h  cell_id.h
include/tools/: gt_testing.h  s2error.h  s2testing.cc  s2testing.h
include/util/bits/: bit-interleave.h  bits.h
include/util/coding/: coder.h  transforms.h
include/util/gtl/: btree.h  btree_container.h  btree_map.h  btree_set.h  compact_array.h  dense_hash_set.h  densehashtable.h  legacy_random_shuffle.h
include/util/math/: mathutil.h  matrix3x3.h  vector.h  vector3_hash.h
include/util/math/exactfloat/: exactfloat.h
include/util/units/: length-units.h
lib/: gtest_maind.lib
src/: CMakeLists.txt
src/S2/: r2rect.cc  s1interval.cc  s2cap.cc  s2cell.cc  s2cell_id.cc  s2coords.cc  s2debug.cc  s2edge_clipping.cc  s2edge_crosser.cc  s2edge_crossings.cc  s2edge_distances.cc  s2error.cc  s2latlng.cc  s2latlng_rect.cc  s2latlng_rect_bounder.cc  s2metrics.cc  s2polyline_measures.cc  s2predicates.cc  s2region.cc
src/base/: stringprintf.cc  strtoint.cc
src/core/: CellID.cpp  Coords.cpp  cap.cpp  cell.cpp  cell_id.cpp  edge_clipping.cc  edge_crosser.cc  edge_crossings.cc  edge_distances.cc  edge_tessellator.cc  gt_cap.cpp  gt_cell.cpp  gt_cell_id.cpp  gt_cell_union.cc  gt_cell_union.cpp  gt_coords.cpp  gt_latlng_rect.cpp  gt_latlng_rect_bounder.cc  gt_metrics.cc  gt_shape.cpp  gtcell.cpp  gtcell_id.cpp  gtcoords.cpp  gtmetrics.cc  latlng_rect.cpp  latlng_rect_bounder.cc  r2rect.cc  region.cc  region.cpp  s1angle.cc  s1chord_angle.cc  s1interval.cc  s2latlng.cc
src/geosot/: geosot_cell_id.cpp
src/gt/: gt_loop.cpp  gt_multipoint.cpp  gt_point.cpp  gt_polygon.cpp  gt_polyline.cpp  gtcell.cpp  gtcell_id.cpp  gtcell_test.cpp  gtcoords.cpp  gtcoords_test.cpp  gtloop.cpp  gtmetrics.cc  gtmultipoint.cpp  gtpoint.cpp  gtpolygon.cpp  gtpolyline.cpp
src/s2/: edge_crossings.cc  edge_distances.cc  edge_tessellator.cc  s2debug.cc  s2measures.cc  s2pointutil.cc
src/tmp/: casts.h  coords.cpp  coords.h  s2metrics.cc
src/tools/: gt_debug.cc  gt_error.cc  gt_testing.cc  s2debug.cc  s2error.cc  s2testing.cc
src/util/coding/: varint.cc
test/: gtcell_id_test.cpp  gtcell_test.cpp  gtcoords_test.cpp
